force-app/main/default/objects/Giro__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>