force-app/main/default/objects/Giro__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código Giro</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>