force-app/main/default/objects/Giro__c/fields/Descripcin__c.field-meta.xml
<CustomField>
    <fullName>Descripcin__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>