force-app/main/default/objects/Giro__c/fields/SubCategoria__c.field-meta.xml
<CustomField>
    <fullName>SubCategoria__c</fullName>
    <label>Sub Categoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>